<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtLoadData"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deseja_carregar_dados"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/rdSexGroup"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim"
                android:id="@+id/rdSim"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao"
                android:id="@+id/rdNao"
                android:checked="false" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:layoutDirection="rtl">

            <Button
                android:id="@+id/btnOk"
                android:text="@string/ok"
                style="@style/AlertDialogButtons"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>